--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="section">
+  <div class="hero">
     <%=image_tag "new_main.jpg" %>
   </div>
   <div class="section">
