--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
 	<section class="section">
 		<div class="column is-three-fifths is-offset-one-fifth">
-			<div class="containerx">
+			<div class="container">
 				<%= image_tag "logo_white.png", class: "is-three-quarters" %>
 			</div>
 			
@@ -32,7 +32,7 @@
 				<%= yield %>
 			</div>
 
-			<div class="container">
+			<div class="container has-text-light has-background-dark has-text-centered">
 				Greyhat Security&nbsp;&nbsp;<%=fa_icon "copyright"%>&nbsp;&nbsp;All rights reserved
 			</div>
 		</div>
