--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -2,15 +2,32 @@
 @cur_html = 'active'.html_safe
 %>
 
+<div class="container has-text-light has-background-dark">
+	<div class="columns has-text-centered">
+		<div class="column">
+			<a href="/index">Inicio</a>
+		</div>
+		<div class="column">
+			<a href="/articulos">Articulos</a>
+		</div>
+		<div class="column">
+			<a href="/acerca">Acerca de</a>
+		</div>
+		<% if user_signed_in? %>
+		<div class="column">
+			<a href="/dashboard">Dashboard</a>
+		</div>
+		<% end %>
+	</div>
+</div>
+
+
 <ul id="nav" class="flex-row">
 	<li class="flex-small <%= current_page?('/index') ? @cur_html : '' %>"">
-		<a href="/index">Inicio</a>
 	</li>
 	<li class="flex-small <%=current_page?('/articulos') || controller.controller_name == 'posts' ? @cur_html : '' %>"">
-		<a href="/articulos">Articulos</a>
 	</li>
 	<li class="flex-small <%= current_page?('/acerca') ? @cur_html : '' %>"">
-		<a href="/acerca">Acerca de</a>
 	</li>
 	<!--
 	<li class="flex-small <%= current_page?('/servicios') ? @cur_html : '' %>"">
