bakground / front updates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,9 @@
 				</div>
 			</div>
 			
-			<br>
-
 			<%= render 'partials/navigation' %>
 
-			<div class="container has-text-dark has-background-light">
+			<div class="container has-text-dark has-background-light m-0">
 				<%= yield %>
 			</div>
 
