--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,8 +1,7 @@
 <%
 @cur_html = 'active'.html_safe
 %>
-
-<div class="tabs is-centered  has-text-light has-background-dark p-2 m-0">
+<div class="tabs is-centered is-medium is-boxed has-text-light m-0">
   <ul>
     <li class="is-active"><a href="/index">Inicio</a></li>
     <li><a href="/articulos">Articulos</a></li>
