--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
 			</div>
 			
 			<%= render 'partials/navigation' %>
+			
+			<p id="notice"><%= notice %></p>
 
 			<div class="container has-text-dark has-background-light m-0">
 				<%= yield %>
