--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -1,37 +1,29 @@
-
+<div class="container p-3">
 <h2>Artículos</h2>
+
 
 <% @posts.each do |post| %>
 
-<div class="flex-row post_list">
-  <div class="flex-small one-fourth image_list">
-    <% if post.image.attached? %>
-    <%=image_tag url_for(post.image)%>
-    <% end %>
+  <div class="columns">
+    <div class="column is-one-third">
+
+      <% if post.image.attached? %>
+        <%=image_tag url_for(post.image), class: "image is-rounded" %>
+      <% end %>
+
+    </div>
+    <div class="column">
+      
+      <strong>
+        <%= link_to post.title, post %>
+      </strong>
+
+      <div style="font-size:small">
+        <em><%= post.created_at.strftime("%d %b. %Y") %></em>
+      </div>
+
+    </div>
   </div>
-  <div class="flex-small">
-    <strong>
-      <%= link_to post.title, post %>
-    </strong>
-
-    <div style="font-size:small">
-      <%= post.created_at.strftime("%d %b. %Y") %> <br>
-      Lectura de <%= (post.body.scan(/\w+/).size/200)+1 %> minutos
-    </div>
-
-    <% if user_signed_in? %>
-    <div style="font-size:small">
-      Unique visitors: <%= post.unique_visits %>
-    </div>
-    <% end %>
-
-<!--
-    <div>
-      <%= post.body.at(0..200) %> ... [<%= link_to ' Leer ', post %>]
-    </div>
--->
-  </div>
-  <div style="clear:both"></div>
-</div>
-
 <% end %>
+
+</div>
