--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,35 +1,42 @@
-<!--
-<p><strong>Greyhat</strong> surge con la visión de proveer servicios de desarrollo de aplicaciones 
-y Hacking Ético,  con herramientas que permitan a nuestros clientes  dar vida a sus ideas en 
-aplicaciones que puedan mantener y escalar, con la garantía de tener un producto seguro y confiable. </p>
+<h2>Acerca de Greyhat</h2>
 
-<p>Contamos con personal certificado y gran experiencia tanto laboral como didáctica, 
-lo que nos permite unificar un servicio de alto nivel en Hacking y Desarrollo así como capacitación y 
-transferencia de conocimiento. </p>
+<p>Greyhat es un espacio donde exploramos el equilibrio entre la innovación digital y la vida cotidiana.
+Creemos que la tecnología no solo moldea nuestro mundo, sino que también refleja quiénes somos
+y cómo vivimos.</p>
+
+<h2 >Nuestra Misión</h2>
+
+<p>Ofrecer una perspectiva única en el vasto universo de la tecnología digital.
+Desde análisis críticos sobre el uso excesivo de tecnología hasta consejos prácticos para manejar
+el estrés en la era digital, Greyhat es tu guía para navegar en este mundo interconectado.</p>
+
+<h2>Nuestro Enfoque</h2>
+
+<p>Greyhat se centra en la sabiduría compartida, inspirada en la idea de que el conocimiento es
+más valioso cuando se comparte. Aquí encontrarás artículos que abarcan desde el desarrollo
+de software hasta reflexiones personales, todos con el objetivo de mejorar la comprensión y
+el uso de la tecnología en nuestras vidas.</p>
 
 
--->
-<h2>El Autor</h2>
+<h2>Conoce al Autor</h2>
 
-<p>
+<p><a href="http://linkedin.com/in/alexertech/" target="_blank">
+<%= image_tag "0.jpg", style:"width:140px;border-radius:5px;margin-right:20px", align:'right' %>
+</a>
+Detrás de Greyhat está Alex Barrios, un profesional con más de 20 años de experiencia en
+distintos campos de las tecnologías de información. Con un sólido conocimiento en
+Desarrollo de Software y certificado experto en Seguridad Informática.
 
-  <%= image_tag "0.jpg", style:"width:140px;border-radius:5px;margin-right:20px", align:'left' %>
-  <strong>Alex Barrios</strong>
-  <a href="http://linkedin.com/in/alexertech/" target="_blank"><%=fa_icon "linkedin"%></a>
-  <p>
-  Profesional con más de 15 años de experiencia en distintos campos de las tecnologías de
-  información, con un sólido conocimiento en Desarrollo Fullstack y certificado experto en
-  seguridad informática (OSCP, OSCE, OSWP, Hardware Security, Software Security, Usable Security).
-  </p>
-  <p>
-  Pro-activo, eficiente y eficaz en la ejecución de proyectos, con extensa experiencia trabajando
-  en grupos y entornos colaborativos.
-  </p>
 
-  <div class="flex-row vertical-center">
-  <%= image_tag  "oscp-acclaim.png", style:'width:120px' %>
-  <%= image_tag  "osce-acclaim.png", style:'width:120px' %>
-  <%= image_tag  "oswp-acclaim.png", style:'width:120px' %>
-  <%= image_tag  "oswe-acclaim.png", style:'width:120px' %>
-</div>
-</p>
+Alex es proactivo, un apasionado de la tecnología con años de experiencia comprometido con
+compartir sus conocimientos y experiencias, e intercambiar ideas y puntos de vistas
+en busca de un crecimiento personal pleno en conjunto.</p>
+
+
+<h2>Únete a Nosotros</h2>
+
+<p>En Greyhat, creemos en el poder de la comunidad. Invitamos a nuestros lectores a participar en conversaciones,
+compartir sus propias experiencias y formar parte de nuestra creciente familia digital.
+
+¡Explora con nosotros el equilibrio entre la tecnología y la vida,
+y descubre cómo la sabiduría digital puede enriquecer tu día a día!</p>
