--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,26 +1,31 @@
-
 <div class="flex-row">
   <div class="flex-small">
 
     <!-- Content -->
-
     <article>
-      
       <div style="height:10px"></div>
 
       <%=image_tag "new_main.jpg",style:"width:100%;border-radius:5px;" %>
 
-      <p>
-      GreyHat en un portal de investigación y desarrollo enfocado en técnologías de la información,
-      crecimiento profesional y la necesidad elemental de crear un equilibro entre nuestra productividad
-      laboral y nuestra vida en general.<br/> <br/>
+      <header>
+        <h2>Bienvenido a Greyhat</h2>
+      </header>
 
-      Los artículos acá publicados surgen de libros que he leído recientemente, o investigaciones realizadas
-      en las últimas técnicas para lograr el mayor rendimiento con el menor esfuerzo. <br/> <br/>
+      <div style="padding:0 20px 0 20px">
+        <div>
+          <p><strong>Tu destino para explorar la convergencia entre Tecnología y Vida</strong></p>
+          <p>En Greyhat, nos sumergimos en el mundo de la tecnología no solo como usuarios, sino como
+          pensadores críticos y exploradores conscientes. Aquí, encontrarás reflexiones sobre cómo la
+          tecnología afecta nuestro día a día, consejos para una vida digital equilibrada, y perspectivas
+          únicas sobre las últimas tendencias. Únete a nosotros en esta aventura para
+          descubrir cómo la tecnología puede enriquecer nuestras vidas sin dominarlas.</p>
 
-      Puede encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material audiovisual, publicaciones e 
-      investigaciones recientes. 
-      </p>
+          <p>Puedes encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material
+            audiovisual, publicaciones e investigaciones recientes.</p>
+
+          <p><strong>Explora, Reflexiona, Conéctate.</strong></p>
+        </div>
+      </div>
 
       <header>
         <h2>Últimos artículos</h2>
@@ -50,39 +55,5 @@
      <% end %>
 
     </article>
-  </div>
-  <!--
-  <div class="flex-small one-third">
-
-    <section>
-      <h3></h3>
-      <p>
-      <ul>
-      <li>Ruby On Rails</li>
-      <li></li>
-      <li></li>
-      <li></li>
-      </li>
-    </section>
-
-    <section>
-      <h3>Nuestros servicios</h3>
-      <ul>
-        <li>Desarrollo Web Full-Stack</li>
-        <li>Mantenimiento Frontend y Backend</li>
-        <li>Auditoría de Sistemas</li>
-        <li>WhiteBox / BlackBox</li>
-        <li>Pentesting y Ethical Hacking</li>
-      </ul>
-    </section>
-
-    <section>
-      <h3>Plataformas</h3>
-      <ul>
-        <li>GNU/Linux en Digital Ocean</li>
-        <li>GCP / Azure / AWS / EC2</li>
-      </ul>
-    </section>
-    -->
   </div>
 </div>
