--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,8 @@
+
+<div style="height:10px"></div>
+
+<%=image_tag "about.jpg",style:"width:100%;border-radius:5px;" %>
+
 <h2>Acerca de Greyhat</h2>
 
 <p>Greyhat es un espacio donde exploramos el equilibrio entre la innovación digital y la vida cotidiana.
