adding image processing for variants

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
     <% end %>
 
     <% if @post.image.attached? %>
-      <div id="image_post"><%= image_tag url_for(@post.image), class: "image_post", style: "border-radius:5px;" %></div>
+      <div id="image_post"><%= image_tag @post.image, class: "image_post", style: "border-radius:5px;" %></div>
     <% end %>
 
     <header>
