--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -6,7 +6,7 @@
 <div class="flex-row post_list">
   <div class="flex-small one-fourth image_list">
     <% if post.image.attached? %>
-    <%=image_tag url_for(post.image)%>
+      <%=image_tag post.image.variant(:thumb)%>
     <% end %>
   </div>
   <div class="flex-small">
