new logo / css updates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,9 @@
 
 <div id="main_body" class="small-container">
 	<div id="header" class="vertical-center logo">
-		<div><%= image_tag  "logo_white.png"%></div>
+		<div><%= image_tag  "wizard_logo.png"%></div>
 	</div>
-
-	<br>
-
+	
 	<%= render 'partials/navigation' %>
 
 	<div id="main">
