--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,9 +9,15 @@
 Creemos que la tecnología no solo moldea nuestro mundo, sino que también refleja quiénes somos
 y cómo vivimos.</p>
 
+<p>Este concepto esta aplicado a nusetras creaciones, buscando ofrecer a nuestros usuarios experiencias
+digitales que sean intuitivas, atractivas y accesibles para todos.</p>
+
 <h2 >Nuestra Misión</h2>
 
-<p>Ofrecer una perspectiva única en el vasto universo de la tecnología digital.
+<p>Desarrollar aplicaciones, juegos, investigaciones y publicaciones sobre tecnología centradas en
+la interacción humana y la experiencia del usuario.</p>
+
+<p>Con nuestros artículos, ofrecer una perspectiva única en el vasto universo de la tecnología digital.
 Desde análisis críticos sobre el uso excesivo de tecnología hasta consejos prácticos para manejar
 el estrés en la era digital, Greyhat es tu guía para navegar en este mundo interconectado.</p>
 
@@ -36,12 +42,3 @@ Desarrollo de Software y certificado experto en Seguridad Informática.
 Alex es proactivo, un apasionado de la tecnología con años de experiencia comprometido con
 compartir sus conocimientos y experiencias, e intercambiar ideas y puntos de vistas
 en busca de un crecimiento personal pleno en conjunto.</p>
-
-
-<h2>Únete a Nosotros</h2>
-
-<p>En Greyhat, creemos en el poder de la comunidad. Invitamos a nuestros lectores a participar en conversaciones,
-compartir sus propias experiencias y formar parte de nuestra creciente familia digital.
-
-¡Explora con nosotros el equilibrio entre la tecnología y la vida,
-y descubre cómo la sabiduría digital puede enriquecer tu día a día!</p>
