--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
     <article>
       <div style="height:10px"></div>
 
-      <%=image_tag "new_main.jpg",style:"width:100%;border-radius:5px;" %>
+      <%=image_tag "old_main.jpg", style:"width:100%;border-radius:5px;" %>
 
       <header>
         <h2>Bienvenido a Greyhat</h2>
@@ -13,15 +13,14 @@
 
       <div style="padding:0 20px 0 20px">
         <div>
-          <p><strong>Tu destino para explorar la convergencia entre Tecnología y Vida</strong></p>
           <p>En Greyhat, nos sumergimos en el mundo de la tecnología no solo como usuarios, sino como
-          pensadores críticos y exploradores conscientes. Aquí, encontrarás reflexiones sobre cómo la
-          tecnología afecta nuestro día a día, consejos para una vida digital equilibrada, y perspectivas
-          únicas sobre las últimas tendencias. Únete a nosotros en esta aventura para
-          descubrir cómo la tecnología puede enriquecer nuestras vidas sin dominarlas.</p>
-
-          <p>Puedes encontrar en la sección <%= link_to "Artículos", "/articulos" %> nuestro material
-            audiovisual, publicaciones e investigaciones recientes.</p>
+          pensadores críticos y exploradores conscientes. Realizamos <strong>desarrollo de aplicaciones</strong>, 
+          juegos, investigaciones y publicaciones sobre tecnología enfocado en la interacción humana y la
+          experiencia del usuario.</p>
+          <p>Utilizando Ruby on Rails como pilar de nuestras creaciones, logramos equilibrar el uso de recursos
+          y la eficiencia en el desarrollo de aplicaciones web y móviles. Nuestro experticia en
+          tecnología y diseño se dedica a crear experiencias digitales que sean intuitivas, atractivas y
+          accesibles para todos.</p>
 
           <p><strong>Explora, Reflexiona, Conéctate.</strong></p>
         </div>
