--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -1,6 +1,11 @@
 
 <h2>Artículos</h2>
 
+<p>Aquí, encontrarás reflexiones sobre cómo la
+tecnología afecta nuestro día a día, consejos para una vida digital equilibrada, y perspectivas
+únicas sobre las últimas tendencias. Únete a nosotros en esta aventura para
+descubrir cómo la tecnología puede enriquecer nuestras vidas sin dominarlas.</p>
+
 <% @posts.each do |post| %>
 
 <div class="flex-row post_list">
