--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -37,9 +37,9 @@
       <strong><a href="http://linkedin.com/in/alexertech/" target="_blank">Alex Barrios</a></strong>
       <br>
       <p style="font-size:14px">
-        Cuenta con más de 15 años de experiencia en distintos campos de las tecnologías de información,
-        ejerciendo principalmente como desarrollador fullstack, administrador de sistemas y asesor de seguridad
-        informática certificado (OSCP, OSCE, OSWP, Hardware Security, Software Security, Usable Security).
+        Cuenta con más de 20 años de experiencia en distintos campos de las tecnologías de información.
+        Con un sólido conocimiento en Desarrollo de Software y certificado experto en Seguridad Informática.
+        Estudia budismo y meditación, y es un apasionado de la tecnología y la vida.
       </p>
       <br>
 
