--- a/app/assets/stylesheets/primitive/main.css
+++ b/app/assets/stylesheets/primitive/main.css
@@ -379,7 +379,6 @@ html {
 
 body {
   color: #404040;
-  background: white;
   font-size: 1rem;
 }
 
@@ -1135,13 +1134,10 @@ caption {
  */
 
  body {
-  background-color: #061716;
-  background-image: url('background.jpg');
-  background: url('background.jpg') no-repeat top center fixed; 
+  background: url('background.jpg') no-repeat top center fixed #061716; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  color: rgba(255, 255, 255, 0.8);
   text-align: left;
   font-family: "Rubik";
   font-size: 16px;
