--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -21,7 +21,7 @@ descubrir cómo la tecnología puede enriquecer nuestras vidas sin dominarlas.</
 
     <div style="font-size:small">
       <%= post.created_at.strftime("%d %b. %Y") %> <br>
-      Lectura de <%= (post.body.scan(/\w+/).size/200)+1 %> minutos
+      Lectura de <%= (post.body.to_plain_text.scan(/\w+/).size/200)+1 %> minutos
     </div>
 
     <% if user_signed_in? %>
@@ -32,7 +32,7 @@ descubrir cómo la tecnología puede enriquecer nuestras vidas sin dominarlas.</
 
 <!--
     <div>
-      <%= post.body.at(0..200) %> ... [<%= link_to ' Leer ', post %>]
+      <%= post.body.to_plain_text.at(0..200) %> ... [<%= link_to ' Leer ', post %>]
     </div>
 -->
   </div>
