--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
   <meta property="og:title" content="<%= @post.title %>" />
-  <meta property="og:description" content="<%= @post.body.at(0..200) %>" />
+  <meta property="og:description" content="<%= @post.body.to_plain_text.truncate(200) %>" />
   <meta property="og:image" content="<%= polymorphic_url(@post.image, :only_path => false) if @post.image.attached? %>" />
 <% end %>
 
@@ -21,12 +21,12 @@
     <header>
       <h2><%= @post.title %></h2>
       <p><%= @post.created_at.strftime("%d %b. %Y") %> |
-        Lectura de <%= (@post.body.scan(/\w+/).size/200)+1 %> minutos | <%= link_to "Volver", "/articulos"%>
+        Lectura de <%= (@post.body.to_plain_text.split.size/200)+1 %> minutos | <%= link_to "Volver", "/articulos"%>
       </p>
     </header>
 
     <div class="medium-container">
-      <%= markdown(@post.body) %>
+      <%= @post.body %>
     </div>
     <hr>
 
